--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,8 +64,6 @@ a:visited {
   font-size: 1.1rem;
 }
 
-
-
 .dropleft {
   display: block;
   background-color: rgb(245, 245, 245);
@@ -79,13 +77,38 @@ a:visited {
   padding: .5rem 1rem;
 }
 
-.post-options .dropleft p {
+.main-post .post-options .dropleft p {
   min-width: 100px;
 }
 
-.post-options .dropleft p:hover {
+.dropleft p:hover{
   cursor: pointer;
+  background-color: #fff;
 }
+
+.comment-header .dropleft {
+  padding: 0px;
+  top: 0px;
+  right: 1rem;
+}
+
+.comment-header .dropleft p {
+  min-width: 80px;
+  padding: 4px 12px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.comment-header .comment-options {
+  position: relative;
+  margin-left: 10px;
+  font-size: .8rem;
+}
+
+.comment-header .comment-options i {
+  font-size: .7rem;
+}
+
 
 /* #region Navbar */
 
@@ -165,25 +188,53 @@ a:visited {
 .home-container {
   position: relative;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   min-height: 70%;
   padding-top: 1rem;
 }
 
-.home-container .left {
+.home-container .right {
   flex-grow: 3;
-  max-width: 280px;
+  max-width: 320px;
   padding: 1rem;
 }
 
-.home-container .hot-news {
+.home-container .right>div,
+.home-container .right>article {
   background-color: #fff;
-  min-height: 50px;
-  margin-bottom: 1rem;
   padding: 1rem;
+  margin-bottom: 1rem;
   -webkit-box-shadow: 1px 9px 21px -2px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 1px 9px 21px -2px rgba(0, 0, 0, 0.3);
   box-shadow: 1px 9px 21px -2px rgba(0, 0, 0, 0.3);
+}
+
+.home-container .right .subscribe-prompt {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.home-container .right .post-news {
+  background-color: inherit;
+  box-shadow: unset;
+  text-align: right;
+  padding: 0;
+}
+
+.home-container .right .post-news.form-showing {
+  background-color: #fff;
+  padding: 0 5px;
+  text-align: left;
+}
+
+.home-container .right .post-news #cancel-news-adding-button {
+  background-color: var(--error);
+  color: #fff;
+  margin-top: .5rem;
+}
+
+.home-container .right .hot-news {
+  min-height: 50px;
 }
 
 .home-container .center {
@@ -193,12 +244,6 @@ a:visited {
 }
 
 .home-container .center .main-post {
-  padding: 1rem;
-}
-
-.home-container .right {
-  flex-grow: 3;
-  max-width: 200px;
   padding: 1rem;
 }
 
@@ -255,13 +300,18 @@ a:visited {
   padding-right: .5rem;
 }
 
-.home-container .main-post .post-options i:hover {
+.home-container .main-post .post-options i:hover,
+.comment .comment-header .comment-options i:hover {
   opacity: 1;
 }
 
-.home-container .main-post .post-options .fas {
+.home-container .main-post .post-options .fas,
+.home-container .main-post .post-options .far,
+.comment .comment-header .comment-options .fas,
+.comment .comment-header .comment-options .far {
   color: gray;
 }
+
 
 .home-container .main-post .main-post-header h1 {
   padding: 0px;
@@ -445,12 +495,6 @@ a:visited {
   padding-bottom: .5rem;
 }
 
-.comment .comment-header .fa-flag {
-  color: var(--secondary);
-  font-size: .8rem;
-  margin-left: .5rem;
-}
-
 .single-post-comments .comment-text {
   border: 1px solid rgba(34, 36, 38, .15);
   outline: 0;
@@ -595,6 +639,10 @@ a:visited {
   .something {
     text-align: center;
   }
+
+  .home-container .right {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -610,17 +658,6 @@ a:visited {
   }
 }
 
-@media only screen and (max-width: 1200px) {
-
-  /* Extra large devices (large laptops and desktops, 1200px and down) */
-  .home-container .right {
-    display: none;
-  }
-
-  .home-container .left {
-    min-width: 170px;
-    padding: 1rem .3rem;
-  }
-}
+@media only screen and (max-width: 1200px) {}
 
 /* #endregion */
