--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,13 @@
   /* imperial red */
   --default: #f1faee;
   /* honeydew */
-  --success: #A8DADC;
+  --success: #4caf50;
   /* powder blue */
   --primary: #457B9D;
   /* celadon blue */
   --secondary: #1d3557;
   /* prussian-blue */
+  --white: #fff;
 }
 
 
@@ -41,62 +42,27 @@ a:visited {
 
 .primary {
   background-color: var(--primary);
-  color: #fff;
+  color: var(--white);
 }
 
 .secondary {
   background-color: var(--secondary);
-  color: #fff;
+  color: var(--white);
 }
 
 .success {
   background-color: var(--success);
-  color: #fff;
+  color: var(--white);
 }
 
 .danger {
   background-color: var(--error);
-  color: #fff;
+  color: var(--white);
 }
 
 .total-items-indicator {
   margin-left: .1rem;
   font-size: 1.1rem;
-}
-
-.dropleft {
-  display: block;
-  background-color: rgb(245, 245, 245);
-  position: absolute;
-  font-weight: bold;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  top: 15px;
-  right: 1.5rem;
-  border-radius: .5rem;
-  padding: .5rem 1rem;
-}
-
-.main-post .post-options .dropleft p {
-  min-width: 100px;
-}
-
-.dropleft p:hover{
-  cursor: pointer;
-  background-color: #fff;
-}
-
-.comment-header .dropleft {
-  padding: 0px;
-  top: 0px;
-  right: 1rem;
-}
-
-.comment-header .dropleft p {
-  min-width: 80px;
-  padding: 4px 12px;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .comment-header .comment-options {
@@ -116,7 +82,7 @@ a:visited {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   display: flex;
   align-content: space-between;
   background-color: var(--primary);
@@ -183,6 +149,8 @@ a:visited {
 /* #endregion */
 
 
+
+
 /* #region Home page */
 
 .home-container {
@@ -190,18 +158,17 @@ a:visited {
   display: flex;
   justify-content: center;
   min-height: 70%;
-  padding-top: 1rem;
 }
 
-.home-container .right {
+.home-container .right-container {
   flex-grow: 3;
   max-width: 320px;
   padding: 1rem;
 }
 
-.home-container .right>div,
-.home-container .right>article {
-  background-color: #fff;
+.home-container .right-container>div,
+.home-container .right-container>article {
+  background-color: var(--white);
   padding: 1rem;
   margin-bottom: 1rem;
   -webkit-box-shadow: 1px 9px 21px -2px rgba(0, 0, 0, 0.3);
@@ -209,32 +176,56 @@ a:visited {
   box-shadow: 1px 9px 21px -2px rgba(0, 0, 0, 0.3);
 }
 
-.home-container .right .subscribe-prompt {
+.home-container .right-container .subscribe-prompt {
   font-size: 0.8rem;
   text-align: center;
 }
 
-.home-container .right .post-news {
+.home-container .right-container .contact-form {
+  font-size: 0.8rem;
+  text-align: center;
+  min-width: 288px;
+}
+
+.home-container .right-container .post-news {
   background-color: inherit;
   box-shadow: unset;
   text-align: right;
   padding: 0;
 }
 
-.home-container .right .post-news.form-showing {
-  background-color: #fff;
+.home-container .right-container .post-news.form-showing {
+  background-color: var(--white);
   padding: 0 5px;
   text-align: left;
 }
 
-.home-container .right .post-news #cancel-news-adding-button {
+#cancel-news-adding-button,
+#cancel-news-edit-button {
   background-color: var(--error);
-  color: #fff;
+  color: var(--white);
   margin-top: .5rem;
 }
 
-.home-container .right .hot-news {
+#cancel-new-message-button {
+  background-color: var(--error);
+  color: var(--white);
+}
+
+.home-container .right-container .hot-news {
+  position: relative;
   min-height: 50px;
+}
+
+.home-container .right-container .hot-news .post-options {
+  position: absolute;
+  right: -2px;
+  top: 0;
+}
+
+.home-container .right-container .hot-news p {
+  margin: 0px;
+  cursor: pointer;
 }
 
 .home-container .center {
@@ -253,7 +244,7 @@ a:visited {
 
 .home-container .new-post.form-showing,
 .home-container .edit-post {
-  background-color: #fff;
+  background-color: var(--white);
   -webkit-box-shadow: 1px 7px 9px 2px rgba(0, 0, 0, 0.35);
   -moz-box-shadow: 1px 7px 9px 2px rgba(0, 0, 0, 0.35);
   box-shadow: 1px 7px 9px 2px rgba(0, 0, 0, 0.35);
@@ -261,8 +252,21 @@ a:visited {
   margin: 20px 5px;
 }
 
-.home-container .new-post #new-post-button {
+.home-container .new-post #new-post-button,
+#new-news-button {
   text-align: right;
+}
+
+.home-container .top-navigation {
+  position: relative;
+  z-index: 2;
+  margin: 20px 5px;
+}
+
+#new-post-button {
+  position: absolute;
+  right: 0px;
+  top: 0px;
 }
 
 .home-container .new-post #cancel-new-post-button,
@@ -281,7 +285,7 @@ a:visited {
 }
 
 .home-container .main-post {
-  background-color: #fff;
+  background-color: var(--white);
   position: relative;
   padding: 20px;
   margin: 20px 5px;
@@ -294,19 +298,19 @@ a:visited {
   margin: 0px 20px 20px;
 }
 
-.home-container .main-post .post-options i {
+.home-container .post-options i {
   opacity: 0.7;
   font-size: 1.3rem;
   padding-right: .5rem;
 }
 
-.home-container .main-post .post-options i:hover,
+.home-container .post-options i:hover,
 .comment .comment-header .comment-options i:hover {
   opacity: 1;
 }
 
-.home-container .main-post .post-options .fas,
-.home-container .main-post .post-options .far,
+.home-container .post-options .fas,
+.home-container .post-options .far,
 .comment .comment-header .comment-options .fas,
 .comment .comment-header .comment-options .far {
   color: gray;
@@ -342,18 +346,13 @@ a:visited {
 
 .home-container .main-post .main-post-header .post-options {
   position: absolute;
-  right: 10px;
+  right: 0px;
   top: 10px;
 }
 
 .home-container .main-post .main-post-header .post-options p {
   text-align: left;
   font-style: normal;
-}
-
-.home-container .main-post .main-post-header .post-options .fa-ellipsis-v {
-  margin-right: -10px;
-  margin-left: 20px;
 }
 
 .home-container .main-post .main-post-header .pin {
@@ -490,9 +489,9 @@ a:visited {
 }
 
 .comment .comment-content {
-  padding-top: .2rem;
   font-size: .8rem;
   padding-bottom: .5rem;
+  margin-top: -0.7rem;
 }
 
 .single-post-comments .comment-text {
@@ -503,7 +502,8 @@ a:visited {
   transition: color .1s ease;
   overflow: auto;
   box-shadow: 0 0 0 0 transparent inset;
-  padding: 1rem;
+  text-indent: 1rem;
+  padding: 1rem 0;
   width: 100%;
 }
 
@@ -513,7 +513,9 @@ a:visited {
 
 .home-container .main-post .main-post-footer .main-post-social-shares {}
 
-.home-container .main-post .main-post-footer .main-post-user-engagement {}
+.home-container .main-post .main-post-footer .main-post-user-engagement {
+  padding-top: 12px;
+}
 
 
 /* #endregion */
@@ -547,6 +549,7 @@ a:visited {
   }
 
 
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -554,6 +557,9 @@ a:visited {
   /* Extra small devices (phones, 600px and down) */
   .navbar .sidenav {
     font-size: larger;
+  }
+  .reports-container {
+    padding-top: 3rem;
   }
 
   .home-container .main-post.single-post {
@@ -596,6 +602,7 @@ a:visited {
   .navbar .center {
     justify-content: center;
   }
+
 }
 
 @media only screen and (min-width: 768px) {
@@ -640,7 +647,7 @@ a:visited {
     text-align: center;
   }
 
-  .home-container .right {
+  .home-container .right-container {
     display: none;
   }
 }
