--- a/client/src/index.css
+++ b/client/src/index.css
@@ -236,6 +236,17 @@ a:visited {
 
 /* #endregion */
 
+a.menu-item-link {
+  color: black;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+a.menu-item-link:hover {
+  color: black;
+}
+
 ul.errors {
   align-self: flex-start;
 }
@@ -717,7 +728,7 @@ p.error {
 @media only screen and (max-width: 768px) {
 
   /* Medium devices (landscape tablets, 768px and down) */
-  .navbar {
+  .navbar, #account-button {
     font-size: medium;
   }
 
