--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,6 +37,7 @@ code {
   width: 80px;
   height: 80px;
 }
+
 .lds-default div {
   position: absolute;
   width: 6px;
@@ -45,70 +46,88 @@ code {
   border-radius: 50%;
   animation: lds-default 1.2s linear infinite;
 }
+
 .lds-default div:nth-child(1) {
   animation-delay: 0s;
   top: 37px;
   left: 66px;
 }
+
 .lds-default div:nth-child(2) {
   animation-delay: -0.1s;
   top: 22px;
   left: 62px;
 }
+
 .lds-default div:nth-child(3) {
   animation-delay: -0.2s;
   top: 11px;
   left: 52px;
 }
+
 .lds-default div:nth-child(4) {
   animation-delay: -0.3s;
   top: 7px;
   left: 37px;
 }
+
 .lds-default div:nth-child(5) {
   animation-delay: -0.4s;
   top: 11px;
   left: 22px;
 }
+
 .lds-default div:nth-child(6) {
   animation-delay: -0.5s;
   top: 22px;
   left: 11px;
 }
+
 .lds-default div:nth-child(7) {
   animation-delay: -0.6s;
   top: 37px;
   left: 7px;
 }
+
 .lds-default div:nth-child(8) {
   animation-delay: -0.7s;
   top: 52px;
   left: 11px;
 }
+
 .lds-default div:nth-child(9) {
   animation-delay: -0.8s;
   top: 62px;
   left: 22px;
 }
+
 .lds-default div:nth-child(10) {
   animation-delay: -0.9s;
   top: 66px;
   left: 37px;
 }
+
 .lds-default div:nth-child(11) {
   animation-delay: -1s;
   top: 62px;
   left: 52px;
 }
+
 .lds-default div:nth-child(12) {
   animation-delay: -1.1s;
   top: 52px;
   left: 62px;
 }
+
 @keyframes lds-default {
-  0%, 20%, 80%, 100% {
+
+  0%,
+  20%,
+  80%,
+  100% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.5);
   }
@@ -391,7 +410,8 @@ p.error {
 }
 
 .home-container .new-post #new-post-submission,
-.home-container .edit-post #edit-post-submission {
+.home-container .edit-post #edit-post-submission,
+#report-submission {
   margin-top: 1rem;
 }
 
@@ -605,7 +625,8 @@ p.error {
   margin-top: -0.7rem;
 }
 
-.single-post-comments .comment-text {
+.single-post-comments .comment-text,
+.report-text {
   border: 1px solid rgba(34, 36, 38, .15);
   outline: 0;
   border-radius: .3rem;
@@ -618,7 +639,8 @@ p.error {
   width: 100%;
 }
 
-.single-post-comments .comment-text:focus {
+.single-post-comments .comment-text:focus,
+.report-text:focus {
   border-color: var(--primary);
 }
 
@@ -650,6 +672,16 @@ p.error {
   color: var(--secondary)
 }
 
+.report-modal-body {
+  position: absolute;
+  width: 500px;
+  padding: 1.2rem;
+  background-color: var(--white);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+
 /* #region media-queries */
 
 @media only screen and (min-width: 600px) {
@@ -669,6 +701,7 @@ p.error {
   .navbar .sidenav {
     font-size: larger;
   }
+
   .reports-container {
     padding-top: 3rem;
   }
@@ -728,7 +761,8 @@ p.error {
 @media only screen and (max-width: 768px) {
 
   /* Medium devices (landscape tablets, 768px and down) */
-  .navbar, #account-button {
+  .navbar,
+  #account-button {
     font-size: medium;
   }
 
